AI-generated Russian translations for 23.2

--- a/Strings/AppResources.ru.resx
+++ b/Strings/AppResources.ru.resx
@@ -59,7 +59,10 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+  <xsd:schema id="root"
+    xmlns=""
+    xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+    xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -2449,8 +2452,8 @@
     <comment>Throttle Up</comment>
   </data>
   <data name="Error.NetworkErrorShort" xml:space="preserve">
-     <value>Сетевая Ошибка</value>
-     <comment>Network Error</comment>
+    <value>Сетевая Ошибка</value>
+    <comment>Network Error</comment>
   </data>
   <data name="SystemsStatus.NoAdditionalInformation" xml:space="preserve">
     <value>Нет Дополнительной Информации</value>
@@ -2595,5 +2598,276 @@ Check map for more information</comment>
   <data name="UserAccountControl.DiscordLinked.Title" xml:space="preserve">
     <value>Аккаунт Связан</value>
     <comment>Account Linked</comment>
+  </data>
+  <data name="FlightFreeControl.ChangeAircraftUpper" xml:space="preserve">
+    <value>ИЗМЕНИТЬ САМОЛЁТ</value>
+  </data>
+  <data name="FlightFreeControl.ImageNotFoundUpper" xml:space="preserve">
+    <value>ИЗОБРАЖЕНИЕ НЕ НАЙДЕНО</value>
+  </data>
+  <data name="FlightFreeControl.NewFlightUpper" xml:space="preserve">
+    <value>НОВЫЙ ПОЛЁТ</value>
+  </data>
+  <data name="FlightFreeControl.UnavailableUpper" xml:space="preserve">
+    <value>НЕДОСТУПНО</value>
+  </data>
+  <data name="FlightFreeControl.WeatherUpper" xml:space="preserve">
+    <value>ПОГОДА</value>
+  </data>
+  <data name="FlightMenu.AltimeterUpper" xml:space="preserve">
+    <value>АЛЬТИМЕТР</value>
+  </data>
+  <data name="FlightMenu.ApproxDurationUpper" xml:space="preserve">
+    <value>ПРИБЛИЗ. ДЛИТЕЛЬНОСТЬ</value>
+  </data>
+  <data name="FlightMenu.CloudsUpper" xml:space="preserve">
+    <value>ОБЛАКА</value>
+  </data>
+  <data name="FlightMenu.DistanceUpper" xml:space="preserve">
+    <value>РАССТОЯНИЕ</value>
+  </data>
+  <data name="FlightMenu.FlightSchoolDescription" xml:space="preserve">
+    <value>Освойте навыки пилотирования с интерактивными учебниками</value>
+  </data>
+  <data name="FlightMenu.FlightSchoolUpper" xml:space="preserve">
+    <value>ШКОЛА ПИЛОТАЖА</value>
+  </data>
+  <data name="FlightMenu.FreeFlightDescription" xml:space="preserve">
+    <value>Выберите свой самолёт и аэропорт, настройте план полёта и наслаждайтесь захватывающими полётными испытаниями на своём собственном темпе</value>
+  </data>
+  <data name="FlightMenu.FreeFlightUpper" xml:space="preserve">
+    <value>СВОБОДНЫЙ ПОЛЁТ</value>
+  </data>
+  <data name="FlightMenu.GenericFlightUpper" xml:space="preserve">
+    <value>ОБЫЧНЫЙ ПОЛЁТ</value>
+  </data>
+  <data name="FlightMenu.LatestMetarUpper" xml:space="preserve">
+    <value>ПОСЛЕДНИЙ МЕТАР</value>
+  </data>
+  <data name="FlightMenu.MissionsDescription" xml:space="preserve">
+    <value>Погрузитесь прямо в действие с рекомендуемыми маршрутами для авиалиний и чартерных рейсов, основ анных на плотности воздушного движения и АТС</value>
+  </data>
+  <data name="FlightMenu.MissionsUpper" xml:space="preserve">
+    <value>ЗАДАНИЯ</value>
+  </data>
+  <data name="FlightMenu.ParkingUpper" xml:space="preserve">
+    <value>СТОЯНКА</value>
+  </data>
+  <data name="FlightMenu.TemperatureUpper" xml:space="preserve">
+    <value>ТЕМПЕРАТУРА</value>
+  </data>
+  <data name="FlightMenu.TimeUpper" xml:space="preserve">
+    <value>ВРЕМЯ</value>
+  </data>
+  <data name="FlightMenu.TypeUpper" xml:space="preserve">
+    <value>ТИП</value>
+  </data>
+  <data name="FlightMenu.VisibilityUpper" xml:space="preserve">
+    <value>ВИДИМОСТЬ</value>
+  </data>
+  <data name="FlightMenu.Wind" xml:space="preserve">
+    <value>{0:#000}°, {1} узлов</value>
+    <comment>{0:#000}°, {1} узлов</comment>
+  </data>
+  <data name="FlightMenu.WindCalm" xml:space="preserve">
+    <value>Штиль</value>
+  </data>
+  <data name="FlightMenu.WindUpper" xml:space="preserve">
+    <value>ВЕТЕР</value>
+  </data>
+  <data name="FlightMenu.WindWithGust" xml:space="preserve">
+    <value>{0:#000}°, {1} - {2} узлов</value>
+  </data>
+  <data name="FlightMenu.WorldUpper" xml:space="preserve">
+    <value>МИР</value>
+  </data>
+  <data name="FlightMissionControl.LongHaulUpper" xml:space="preserve">
+    <value>ДАЛЬНИЙ РЕЙС</value>
+  </data>
+  <data name="FlightMissionControl.MediumHaulUpper" xml:space="preserve">
+    <value>СРЕДНЕРЕЙСОВЫЙ</value>
+  </data>
+  <data name="FlightMissionControl.NoMissionsFoundUpper" xml:space="preserve">
+    <value>ЗАДАНИЯ НЕ НАЙДЕНЫ</value>
+  </data>
+  <data name="FlightMissionControl.ShortHaulUpper" xml:space="preserve">
+    <value>КОРОТКИЙ РЕЙС</value>
+  </data>
+  <data name="FlightMissionControl.UltraLongHaulUpper" xml:space="preserve">
+    <value>СУПЕРДЛИТЕЛЬНЫЙ РЕЙС</value>
+  </data>
+  <data name="FlightSchoolControl.AircraftUpper" xml:space="preserve">
+    <value>САМОЛЁТ</value>
+  </data>
+  <data name="FlightSchoolControl.NoEntrySelected" xml:space="preserve">
+    <value>НЕ ВЫБРАНА ЗАПИСЬ</value>
+  </data>
+  <data name="FlightSchoolControl.NoLessonsFoundUpper" xml:space="preserve">
+    <value>УРОКИ НЕ НАЙДЕНЫ</value>
+  </data>
+  <data name="Global.NotApplicable" xml:space="preserve">
+    <value>Н/Д</value>
+  </data>
+  <data name="LogbookControl.AircraftUpper" xml:space="preserve">
+    <value>САМОЛЁТ</value>
+  </data>
+  <data name="LogbookControl.AllUpper" xml:space="preserve">
+    <value>ВСЕ</value>
+  </data>
+  <data name="LogbookControl.AtcUpper" xml:space="preserve">
+    <value>АТС</value>
+  </data>
+  <data name="LogbookControl.DistanceUpper" xml:space="preserve">
+    <value>РАССТОЯНИЕ</value>
+  </data>
+  <data name="LogbookControl.DurationUpper" xml:space="preserve">
+    <value>ДЛИТЕЛЬНОСТЬ</value>
+  </data>
+  <data name="LogbookControl.ExportErrorMessage" xml:space="preserve">
+    <value>Ошибка экспорта файла повтора. Проверьте, что у вас есть достаточно свободного места на устройстве</value>
+  </data>
+  <data name="LogbookControl.ExportingUpper" xml:space="preserve">
+    <value>ЭКСПОРТ</value>
+  </data>
+  <data name="LogbookControl.FileSizeUpper" xml:space="preserve">
+    <value>РАЗМЕР ФАЙЛА</value>
+  </data>
+  <data name="LogbookControl.MultiplayerUpper" xml:space="preserve">
+    <value>МУЛЬТИПЛЕЕР</value>
+  </data>
+  <data name="LogbookControl.NoEntrySelected" xml:space="preserve">
+    <value>НЕ ВЫБРАНА ЗАПИСЬ</value>
+  </data>
+  <data name="LogbookControl.NoItemsFound" xml:space="preserve">
+    <value>НЕ НАЙДЕНО ЭЛЕМЕНТОВ</value>
+  </data>
+  <data name="LogbookControl.OnlyReplaysUpper" xml:space="preserve">
+    <value>ТОЛЬКО ПОВТОРЫ</value>
+  </data>
+  <data name="LogbookControl.ServerUpper" xml:space="preserve">
+    <value>СЕРВЕР</value>
+  </data>
+  <data name="LogbookControl.SoloUpper" xml:space="preserve">
+    <value>ОДИНОЧНЫЙ</value>
+  </data>
+  <data name="LogbookControl.XpEarnedUpper" xml:space="preserve">
+    <value>ЗАРАБОТАНО ОПЫТА</value>
+  </data>
+  <data name="LogbookControl.YourLogbook" xml:space="preserve">
+    <value>ВАШ ЛОГБУК</value>
+  </data>
+  <data name="LoginSubscriptionPage.Pricing12Months" xml:space="preserve">
+    <value>{0} / 12 месяцев</value>
+  </data>
+  <data name="LoginSubscriptionPage.Pricing6Months" xml:space="preserve">
+    <value>{0} / 6 месяцев</value>
+  </data>
+  <data name="MainMenuPage.AirTrafficControlUpper" xml:space="preserve">
+    <value>УПРАВЛЕНИЕ ВОЗДУШНЫМ ДВИЖЕНИЕМ</value>
+  </data>
+  <data name="MainMenuPage.ControlButtonUpper" xml:space="preserve">
+    <value>УПРАВЛЕНИЕ</value>
+  </data>
+  <data name="MainMenuPage.FlightUpper" xml:space="preserve">
+    <value>ПОЛЁТ</value>
+  </data>
+  <data name="MainMenuPage.FlyButtonUpper" xml:space="preserve">
+    <value>ПОЛЕТЕТЬ</value>
+  </data>
+  <data name="MainMenuPage.OpenButtonUpper" xml:space="preserve">
+    <value>ОТКРЫТЬ</value>
+  </data>
+  <data name="MainMenuPage.ReplayButtonUpper" xml:space="preserve">
+    <value>ПОВТОР</value>
+  </data>
+  <data name="MainMenuPage.UnableToPlayReplay" xml:space="preserve">
+    <value>Невозможно воспроизвести файл повтора</value>
+  </data>
+  <data name="MenuAtcControl.ChangeAirportUpper" xml:space="preserve">
+    <value>ИЗМЕНИТЬ АЭРОПОРТ</value>
+  </data>
+  <data name="MenuAtcControl.Duration" xml:space="preserve">
+    <value>Длительность</value>
+  </data>
+  <data name="MenuAtcControl.Frequencies" xml:space="preserve">
+    <value>Частоты</value>
+  </data>
+  <data name="MenuAtcControl.MultipleFrequencies" xml:space="preserve">
+    <value>Несколько частот</value>
+  </data>
+  <data name="MenuAtcControl.NewAtcSessionUpper" xml:space="preserve">
+    <value>НОВАЯ СЕССИЯ АТС</value>
+  </data>
+  <data name="MenuAtcControl.NoSessionsFoundUpper" xml:space="preserve">
+    <value>СЕССИИ НЕ НАЙДЕНЫ</value>
+  </data>
+  <data name="MenuAtcControl.ResumeAtcSessionQuestion" xml:space="preserve">
+    <value>Возобновить сессию АТС?</value>
+  </data>
+  <data name="MenuAtcControl.UnableToRestartUserNotSame" xml:space="preserve">
+    <value>Невозможно перезапустить, так как эта сессия не связана с вашей учетной записью</value>
+  </data>
+  <data name="World.SoloDescription" xml:space="preserve">
+    <value>Выберите свой самолёт имаршрут, проверьте свои пилотские навыки и исследуйте красивые пейзажи без ограничений и других пилотов.</value>
+  </data>
+  <data name="FlightPlan.ImportReplaceAdd" xml:space="preserve">
+      <value>Заменить или добавить в существующий план полета?</value>
+  </data>
+  <data name="FlightPlan.Add" xml:space="preserve">
+      <value>Добавить</value>
+  </data>
+  <data name="UserAccountControl.Discord.NotInstalled.Title" xml:space="preserve">
+      <value>Discord не установлен</value>
+  </data>
+  <data name="Settings.General.Legacy" xml:space="preserve">
+      <value>Наследие</value>
+  </data>
+  <data name="AircraftPage.LegacyAircraftWarning" xml:space="preserve">
+      <value>Внимание: Этот самолет является дополнительным и включен из старой версии. Качество его не соответствует нашим новым самолетам.</value>
+  </data>
+  <data name="SystemMessaging.ProximityWarning" xml:space="preserve">
+      <value>Пожалуйста, поддерживайте безопасное расстояние с впереди летящим самолетом.</value>
+  </data>
+  <data name="LoginSubscriptionPage.NoSubscriptionFound" xml:space="preserve">
+      <value>Мы нашли ваш аккаунт, но к нему не привязано активной подписки.</value>
+  </data>
+  <data name="IntroPage.Home" xml:space="preserve">
+      <value>Домашняя</value>
+  </data>
+  <data name="UserAccountControl.Discord.NotInstalled.Message" xml:space="preserve">
+      <value>Для подключения к серверу Infinite Flight необходимо установить Discord из App Store. Хотите установить его сейчас?</value>
+  </data>
+  <data name="Error.InvalidTimeSpan" xml:space="preserve">
+      <value>Неверные временные значения для этой сессии (код ошибки {0})</value>
+  </data>
+  <data name="Settings.General.ShowLegacyAircraft.Warning" xml:space="preserve">
+      <value>Наследственные самолеты - это дополнительные самолеты из более старых версий Infinite Flight и не имеют такого же качества. Показать их все равно?</value>
+  </data>
+  <data name="GroundServices.ConditionsNotMet" xml:space="preserve">
+      <value>Для обслуживания на земле требуется включенный стояночный тормоз, отключенные противоударные огни и выключенные двигатели.</value>
+  </data>
+  <data name="Settings.General.ShowLegacyAircraft.Subtitle" xml:space="preserve">
+      <value>Показывать наследственные самолеты, которые не отражают последние изменения (высококачественные виртуальные кабины, приборы и т.д.)</value>
+  </data>
+  <data name="Settings.General.ShowLegacyAircraft.Title" xml:space="preserve">
+      <value>Показать наследственные самолеты</value>
+  </data>
+  <data name="GameModeSelection.NoAvailableServer" xml:space="preserve">
+      <value>Сервер не доступен</value>
+  </data>
+  <data name="Error.CannotOpenBrowser" xml:space="preserve">
+      <value>Отсутствует доступный браузер для открытия данной ссылки. Убедитесь, что у вас установлен браузер. Если проблема не исчезает, обратитесь в службу поддержки (код ошибки {0})</value>
+  </data>
+  <data name="FlightSchoolControl.NoLessonsFoundUpper" xml:space="preserve">
+      <value>НЕ НАЙДЕНО УРОКОВ</value>
+  </data>
+  <data name="Error.CouldNotGetFileSize" xml:space="preserve">
+      <value>Не удалось подключиться к серверу. Проверьте подключение к интернету (код ошибки {0})</value>
+  </data>
+  <data name="WarningMessageControl.TapToContinue" xml:space="preserve">
+      <value>Нажмите для продолжения</value>
+  </data>
+  <data name="FlightPlan.Replace" xml:space="preserve">
+      <value>Заменить</value>
   </data>
 </root>
