--- a/Strings/AppResources.hu.resx
+++ b/Strings/AppResources.hu.resx
@@ -59,7 +59,10 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+  <xsd:schema id="root"
+    xmlns=""
+    xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+    xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -2649,7 +2652,7 @@ Check map for more information</comment>
   </data>
   <data name="Settings.General.ShowLegacyAircraft.Subtitle" xml:space="preserve">
     <value>Olyan régebbi repülőgépek megjelenítése, amelyek nem tükrözik a legújabb fejlesztéseket (jó minőségű virtuális pilótafülke, műszerek stb.)</value>
-  <comment>Show legacy airplanes that don't reflect the latest evolutions (high quality virtual cockpits, instruments, etc...)</comment>
+    <comment>Show legacy airplanes that don't reflect the latest evolutions (high quality virtual cockpits, instruments, etc...)</comment>
   </data>
   <data name="Settings.General.ShowLegacyAircraft.Warning" xml:space="preserve">
     <value>A régebbi repülőgépek az Infinite Flight régebbi verzióinak extrái, és nem ugyanolyan minőségűek. Mindenképpen megnézed?</value>
@@ -2678,5 +2681,231 @@ Check map for more information</comment>
   <data name="Error.CannotOpenBrowser" xml:space="preserve">
     <value>Nem érhető el böngésző a hivatkozás megnyitásához – győződj meg róla, hogy telepítetted a böngészőt. Ha a probléma továbbra is fennáll, fordulj az ügyfélszolgálathoz (hibakód: {0})</value>
     <comment>No browser is available to open this link - ensure you have a browser installed. Contact support if the issue persists (error code {0})</comment>
+  </data>
+  <data name="FlightFreeControl.ChangeAircraftUpper" xml:space="preserve">
+    <value>REPÜLŐT VÁLTOZTATÁSA</value>
+  </data>
+  <data name="FlightFreeControl.ImageNotFoundUpper" xml:space="preserve">
+    <value>KÉP NEM TALÁLHATÓ</value>
+  </data>
+  <data name="FlightFreeControl.NewFlightUpper" xml:space="preserve">
+    <value>ÚJ REPÜLÉS</value>
+  </data>
+  <data name="FlightFreeControl.UnavailableUpper" xml:space="preserve">
+    <value>ELÉRHETETLEN</value>
+  </data>
+  <data name="FlightFreeControl.WeatherUpper" xml:space="preserve">
+    <value>IDŐJÁRÁS</value>
+  </data>
+  <data name="FlightMenu.AltimeterUpper" xml:space="preserve">
+    <value>ALTOMÉTER</value>
+  </data>
+  <data name="FlightMenu.ApproxDurationUpper" xml:space="preserve">
+    <value>KB. IDŐTARTAM</value>
+  </data>
+  <data name="FlightMenu.CloudsUpper" xml:space="preserve">
+    <value>FELHŐK</value>
+  </data>
+  <data name="FlightMenu.DistanceUpper" xml:space="preserve">
+    <value>TÁVOLSÁG</value>
+  </data>
+  <data name="FlightMenu.FlightSchoolDescription" xml:space="preserve">
+    <value>Használd az interaktív oktatóanyagokat a pilótai képességeid fejlesztésére</value>
+  </data>
+  <data name="FlightMenu.FlightSchoolUpper" xml:space="preserve">
+    <value>REPÜLŐ ISKOLA</value>
+  </data>
+  <data name="FlightMenu.FreeFlightDescription" xml:space="preserve">
+    <value>Válassz repülőgépet és repülőteret, alakítsd ki a repülési tervedet, és élvezd az lenyűgöző repülési élményt a saját tempódban</value>
+  </data>
+  <data name="FlightMenu.FreeFlightUpper" xml:space="preserve">
+    <value>SZABAD REPÜLÉS</value>
+  </data>
+  <data name="FlightMenu.GenericFlightUpper" xml:space="preserve">
+    <value>ÁLTALÁNOS REPÜLÉS</value>
+  </data>
+  <data name="FlightMenu.LatestMetarUpper" xml:space="preserve">
+    <value>LEGI KÖZLEMÉNY</value>
+  </data>
+  <data name="FlightMenu.MissionsDescription" xml:space="preserve">
+    <value>Készülj fel az akcióra a forgalom és az ATC alapján javasolt légiutas-kísérletekkel és charter útvonalakkal</value>
+  </data>
+  <data name="FlightMenu.MissionsUpper" xml:space="preserve">
+    <value>KÜLDETÉSEK</value>
+  </data>
+  <data name="FlightMenu.ParkingUpper" xml:space="preserve">
+    <value>PARKOLÓ</value>
+  </data>
+  <data name="FlightMenu.TemperatureUpper" xml:space="preserve">
+    <value>HŐMÉRSÉKLET</value>
+  </data>
+  <data name="FlightMenu.TimeUpper" xml:space="preserve">
+    <value>IDŐ</value>
+  </data>
+  <data name="FlightMenu.TypeUpper" xml:space="preserve">
+    <value>TÍPUS</value>
+  </data>
+  <data name="FlightMenu.VisibilityUpper" xml:space="preserve">
+    <value>LÁTHATÓSÁG</value>
+  </data>
+  <data name="FlightMenu.Wind" xml:space="preserve">
+    <value>{0:#000}° {1} csomó</value>
+    <comment>{0:#000}° {1} csomó</comment>
+  </data>
+  <data name="FlightMenu.WindCalm" xml:space="preserve">
+    <value>Csendes</value>
+  </data>
+  <data name="FlightMenu.WindUpper" xml:space="preserve">
+    <value>SZÉL</value>
+  </data>
+  <data name="FlightMenu.WindWithGust" xml:space="preserve">
+    <value>{0:#000}° {1} - {2} csomó</value>
+  </data>
+  <data name="FlightMenu.WorldUpper" xml:space="preserve">
+    <value>VILÁG</value>
+  </data>
+  <data name="FlightMissionControl.LongHaulUpper" xml:space="preserve">
+    <value>HOSZSZÚ TÁV</value>
+  </data>
+  <data name="FlightMissionControl.MediumHaulUpper" xml:space="preserve">
+    <value>KÖZEPES TÁV</value>
+  </data>
+  <data name="FlightMissionControl.NoMissionsFoundUpper" xml:space="preserve">
+    <value>NEM TALÁLTAM KÜLDETÉST</value>
+  </data>
+  <data name="FlightMissionControl.ShortHaulUpper" xml:space="preserve">
+    <value>RÖVID TÁV</value>
+  </data>
+  <data name="FlightMissionControl.UltraLongHaulUpper" xml:space="preserve">
+    <value>ULTRA HOSSZÚ TÁV</value>
+  </data>
+  <data name="FlightSchoolControl.AircraftUpper" xml:space="preserve">
+    <value>REPÜLŐGÉP</value>
+  </data>
+  <data name="FlightSchoolControl.NoEntrySelected" xml:space="preserve">
+    <value>NINCS KIVÁLASZTOTT BEJEGYZÉS</value>
+  </data>
+  <data name="FlightSchoolControl.NoLessonsFoundUpper" xml:space="preserve">
+    <value>NEM TALÁLTAM TANANYAGOT</value>
+  </data>
+  <data name="Global.NotApplicable" xml:space="preserve">
+    <value>NEM ALKALMAZHATÓ</value>
+  </data>
+  <data name="LogbookControl.AircraftUpper" xml:space="preserve">
+    <value>REPÜLŐGÉP</value>
+  </data>
+  <data name="LogbookControl.AllUpper" xml:space="preserve">
+    <value>ÖSSZES</value>
+  </data>
+  <data name="LogbookControl.AtcUpper" xml:space="preserve">
+    <value>ATC</value>
+  </data>
+  <data name="LogbookControl.DistanceUpper" xml:space="preserve">
+    <value>TÁVOLSÁG</value>
+  </data>
+  <data name="LogbookControl.DurationUpper" xml:space="preserve">
+    <value>IDŐTARTAM</value>
+  </data>
+  <data name="LogbookControl.ExportErrorMessage" xml:space="preserve">
+    <value>Hiba történt a visszajátszás fájl exportálása során. Ellenőrizd, hogy rendelkezel-e elegendő tárhellyel.</value>
+  </data>
+  <data name="LogbookControl.ExportingUpper" xml:space="preserve">
+    <value>EXPORTÁLÁS</value>
+  </data>
+  <data name="LogbookControl.FileSizeUpper" xml:space="preserve">
+    <value>FÁJLMÉRET</value>
+  </data>
+  <data name="LogbookControl.MultiplayerUpper" xml:space="preserve">
+    <value>TÖBBJÁTÉKOS</value>
+  </data>
+  <data name="LogbookControl.NoEntrySelected" xml:space="preserve">
+    <value>NINCS KIVÁLASZTOTT BEJEGYZÉS</value>
+  </data>
+  <data name="LogbookControl.NoItemsFound" xml:space="preserve">
+    <value>NEM TALÁLTAM ELEMET</value>
+  </data>
+  <data name="LogbookControl.OnlyReplaysUpper" xml:space="preserve">
+    <value>CSAK VISSZAJÁTSZÁSOK</value>
+  </data>
+  <data name="LogbookControl.ServerUpper" xml:space="preserve">
+    <value>SERVER</value>
+  </data>
+  <data name="LogbookControl.SoloUpper" xml:space="preserve">
+    <value>EGYÉNI</value>
+  </data>
+  <data name="LogbookControl.XpEarnedUpper" xml:space="preserve">
+    <value>SZEREZETT TP</value>
+  </data>
+  <data name="LogbookControl.YourLogbook" xml:space="preserve">
+    <value>A REPÜLŐJEGYZETED</value>
+  </data>
+  <data name="LoginSubscriptionPage.Pricing12Months" xml:space="preserve">
+    <value>{0} / 12 hónap</value>
+  </data>
+  <data name="LoginSubscriptionPage.Pricing6Months" xml:space="preserve">
+    <value>{0} / 6 hónap</value>
+  </data>
+  <data name="MainMenuPage.AirTrafficControlUpper" xml:space="preserve">
+    <value>LEGTÉRI IRÁNYÍTÁS</value>
+  </data>
+  <data name="MainMenuPage.ControlButtonUpper" xml:space="preserve">
+    <value>IRÁNYÍTÁS</value>
+  </data>
+  <data name="MainMenuPage.FlightUpper" xml:space="preserve">
+    <value>REPÜLÉS</value>
+  </data>
+  <data name="MainMenuPage.FlyButtonUpper" xml:space="preserve">
+    <value>REPÜLÉS</value>
+  </data>
+  <data name="MainMenuPage.OpenButtonUpper" xml:space="preserve">
+    <value>MEGNYITÁS</value>
+  </data>
+  <data name="MainMenuPage.ReplayButtonUpper" xml:space="preserve">
+    <value>VISSZAJÁTSZÁS</value>
+  </data>
+  <data name="MainMenuPage.UnableToPlayReplay" xml:space="preserve">
+    <value>Nem sikerült lejátszani a visszajátszás fájlt</value>
+  </data>
+  <data name="MenuAtcControl.ChangeAirportUpper" xml:space="preserve">
+    <value>REPÜLŐTÉR VÁLTOZTATÁSA</value>
+  </data>
+  <data name="MenuAtcControl.Duration" xml:space="preserve">
+    <value>IDŐTARTAM</value>
+  </data>
+  <data name="MenuAtcControl.Frequencies" xml:space="preserve">
+    <value>GYAKORLÁSI IDŐK</value>
+  </data>
+  <data name="MenuAtcControl.MultipleFrequencies" xml:space="preserve">
+    <value>TÖBB GYAKORLÁSI IDŐ</value>
+  </data>
+  <data name="MenuAtcControl.NewAtcSessionUpper" xml:space="preserve">
+    <value>ÚJ ATC ÜLÉS</value>
+  </data>
+  <data name="MenuAtcControl.NoSessionsFoundUpper" xml:space="preserve">
+    <value>NEM TALÁLTAM ÜLÉSEKET</value>
+  </data>
+  <data name="MenuAtcControl.ResumeAtcSessionQuestion" xml:space="preserve">
+    <value>Folytassam az ATC ülést?</value>
+  </data>
+  <data name="MenuAtcControl.UnableToRestartUserNotSame" xml:space="preserve">
+    <value>Nem lehet újraindítani, mert ez az ülés nem kapcsolódik a fiókodhoz</value>
+  </data>
+  <data name="AircraftPage.ShowLegacyAircraft" xml:space="preserve">
+    <value>Mutassa a régebbi verziók repülőgépeit</value>
+  </data>
+  <data name="World.SoloDescription" xml:space="preserve">
+    <value>Válassz saját repülőgépet és útvonalat, teszteld a pilótai képességeidet és fedezd fel a gyönyörű tájakat szabályok vagy más pilóták nélkül.</value>
+  </data>
+  <data name="LogbookControl.LogbookControl.NoEntrySelected">
+    <value>NINCS KIVÁLASZTOTT BEJEGYZÉS</value>
+  </data>
+  <data name="Error.InvalidTimeSpan">
+      <value>A kezdő és befejező időpontok nem érvényesek (hiba kód: {0})</value>
+  </data>
+  <data name="GameModeSelection.NoAvailableServer">
+      <value>Nincs elérhető szerver</value>
+  </data>
+  <data name="Error.CouldNotGetFileSize">
+      <value>Nem sikerült csatlakozni a szerverhez, ellenőrizd az internetkapcsolatodat (hiba kód: {0})</value>
   </data>
 </root>
